--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,78 @@
  *= require_tree .
  *= require_self
  */
+ @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.title{
+  background-color: rgb(173, 216, 230);
+  padding: 5px 10px;
+  border: solid 2px rgb(142, 177, 188);
+  border-radius: 10px;
+}
+.letters{
+  display: flex;
+  margin: 50px;
+}
+.letter{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 50px;
+  width: 50px;
+  background-color: rgba(173, 216, 230, .5);
+  border: solid 2px rgba(142, 177, 188, .5);
+  border-radius: 10px;
+  margin: 5px;
+}
+.letter p{
+  font-weight: bold;
+  font-size: 30px;
+}
+
+form{
+  display: flex;
+}
+form .text{
+  width: 400px;
+  height: 30px;
+  border: solid 1px rgba(142, 177, 188, .5);
+  border-radius: 10px 0 0 10px;
+  padding: 5px;
+}
+form .submit{
+  background-color: rgb(173, 216, 230);
+  border: none;
+  border-radius: 0 5px 5px 0;
+  font-weight: bold;
+  height: 42px;
+  font-size: 20px;
+  padding-inline: 20px;
+  cursor: pointer;
+
+  transition: all .3s;
+}
+form .submit:hover{
+  background-color: rgba(173, 216, 230, .5);
+}
+.result{
+  margin: 50px;
+}
+
+a{
+  margin-top: 10px;
+}
